--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -36,7 +36,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </a>
-              <a class="brand" href="index.html">Arctic Asset</a>
+              <a class="brand" href="{{ path('arctic_dashboard_dashboard_dashboard') }}">Arctic Asset</a>
               <div class="nav-collapse collapse">
                 {% include "::user.html.twig" %}
                 
