--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -44,8 +44,8 @@
                   <li {% if app.request.attributes.get('_route') == 'arctic_dashboard_dashboard_dashboard' %}class="active"{% endif %}>
                     <a href="{{ path('arctic_dashboard_dashboard_dashboard') }}">Dashboard</a>
                   </li>
-                  <li {% if app.request.attributes.get('_route') == 'arctic_ticket_ticket_tickets' %}class="active"{% endif %}>
-                    <a href="{{ path('arctic_ticket_ticket_tickets') }}">Tickets</a>
+                  <li {% if app.request.attributes.get('_route') == 'ticket' %}class="active"{% endif %}>
+                    <a href="{{ path('ticket') }}">Tickets</a>
                   </li>
                   <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Assets <b class="caret"></b></a>
