--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -20,6 +20,9 @@
         </style>
 
         <script src="{{ asset('js/vendor/modernizr-2.6.1-respond-1.1.0.min.js') }}" type="text/javascript"></script>
+        <script type="text/javascript">
+          var searchUrl = "{{ path('asset_search') }}"
+        </script>
 
         <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
         <!--[if lt IE 9]>
@@ -59,7 +62,7 @@
                   </li>
                 </ul>
                 <form class="navbar-search">
-                  <input type="text" class="search-query" placeholder="Search">
+                  <input id="search" type="text" class="search-query" placeholder="Search" autocomplete="off">
                 </form>
               </div><!--/.nav-collapse -->
             </div>
