--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -21,7 +21,7 @@
 
         <script src="{{ asset('js/vendor/modernizr-2.6.1-respond-1.1.0.min.js') }}" type="text/javascript"></script>
         <script type="text/javascript">
-          var searchUrl = "{{ path('asset_search') }}"
+          var searchUrl = "{{ path('asset_search') }}";
         </script>
 
         <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
@@ -61,8 +61,8 @@
                     </ul>
                   </li>
                 </ul>
-                <form class="navbar-search">
-                  <input id="search" type="text" class="search-query" placeholder="Search" autocomplete="off">
+                <form id="search" class="navbar-search" action="{{ path('asset_search') }}" method="post">
+                  <input id="searchInput" name="query" type="text" class="search-query" placeholder="Search" autocomplete="off">
                 </form>
               </div><!--/.nav-collapse -->
             </div>
