--- a/src/Arctic/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Arctic/UserBundle/Resources/views/Security/login.html.twig
@@ -2,10 +2,10 @@
 
 {% block content %}
 <div class="row">
-  <div class="whiteBackground greyBorder roundedCorners padding15px">
+  <div class="whiteBackground greyBorder roundedCorners">
     <form class="form-horizontal" action="{{ path("fos_user_security_check") }}" method="post">
     	<input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
-      <legend>Login</legend>
+      <legend><span class="padding15px">Login</span></legend>
       {% if error %}<div class="alert alert-error">{{ error|trans({}, 'FOSUserBundle') }}</div>{% endif %}
       <div class="control-group">
         <label class="control-label" for="username">{{ 'security.login.username'|trans({}, 'FOSUserBundle') }}</label>
