--- a/src/Arctic/AssetBundle/Resources/views/Asset/assets.html.twig
+++ b/src/Arctic/AssetBundle/Resources/views/Asset/assets.html.twig
@@ -60,7 +60,15 @@
 					    	<td>{{ asset.make }}</td>
 					    	<td>{{ asset.model }}</td>
 					    	<td>
-								<span class="label label-success">OK</span>
+					    		{% if asset.status == 1 %}
+								<span class="label label-success">Available</span>
+					    		{% elseif asset.status == 2 %}
+					    		<span class="label label-info">In use</span>
+					    		{% elseif asset.status == 3 %}
+					    		<span class="label label-important">In for repair</span>
+					    		{% elseif asset.status == 4 %}
+					    		<span class="label">Discarded</span>
+					    		{% endif %}
 							</td>
 							<td>
 								<a href="{{ path('asset_show', { 'id': asset.id }) }}"><i class="icon-search"></i></a>
